Fixed some warnings.

--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -286,12 +286,19 @@
     <Compile Include="DMO\OutputStreamInfoFlags.cs" />
     <Compile Include="DMO\ProcessOutputFlags.cs" />
     <Compile Include="DMO\SetTypeFlags.cs" />
+    <Compile Include="DSP\BandpassFilter.cs" />
     <Compile Include="DSP\BiQuad.cs" />
     <Compile Include="DSP\ChannelMatrixElement.cs" />
     <Compile Include="DSP\FastFourierTransformation.cs" />
     <Compile Include="DSP\FftProvider.cs" />
     <Compile Include="DSP\FftMode.cs" />
     <Compile Include="DSP\FftSize.cs" />
+    <Compile Include="DSP\HighpassFilter.cs" />
+    <Compile Include="DSP\HighShelfFilter.cs" />
+    <Compile Include="DSP\LowpassFilter.cs" />
+    <Compile Include="DSP\LowShelfFilter.cs" />
+    <Compile Include="DSP\NotchFilter.cs" />
+    <Compile Include="DSP\PeakFilter.cs" />
     <Compile Include="DSP\PitchShifterInternal.cs" />
     <Compile Include="FluentExtensions.cs" />
     <Compile Include="GlobalSuppressions.cs" />
