--- a/Samples/FfmpegSample/App.config
+++ b/Samples/FfmpegSample/App.config
@@ -1,9 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="ffmpeg"
-             type="CSCore.Ffmpeg.FfmpegConfigurationSection, CSCore.Ffmpeg, Version=1.0.0.0, Culture=neutral"></section>
+    <section name="ffmpeg" type="CSCore.Ffmpeg.FfmpegConfigurationSection, CSCore.Ffmpeg, Version=1.0.0.0, Culture=neutral"></section>
   </configSections>
-  <ffmpeg loglevel="Debug" >
+  <ffmpeg loglevel="Debug">
   </ffmpeg>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
