--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <AssemblyName>CSCore</AssemblyName>
-    <TargetFrameworks>net451;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>net451;netstandard2.0;netcoreapp2.0</TargetFrameworks>
     <VersionPrefix>1.2.1.1</VersionPrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
