--- a/Samples/SoundTouchPitchAndTempo/SoundTouchPitchAndTempo.csproj
+++ b/Samples/SoundTouchPitchAndTempo/SoundTouchPitchAndTempo.csproj
@@ -103,7 +103,7 @@
     <Content Include="Libs\SoundTouch.dll" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CSCore\CSCore.csproj">
+    <ProjectReference Include="..\..\CSCore\CSCore.csproj">
       <Project>{c3dccfe3-dd3f-4eee-849b-33e355b1e064}</Project>
       <Name>CSCore</Name>
     </ProjectReference>
