--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -115,9 +115,14 @@
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Memory" Version="4.5.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <Version>2.0.0.0</Version>
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 </Project>
