--- a/CSCore/CSCore.csproj
+++ b/CSCore/CSCore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <AssemblyName>CSCore</AssemblyName>
-    <TargetFrameworks>net451;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <VersionPrefix>1.2.1.1</VersionPrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
@@ -112,6 +112,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
@@ -120,5 +124,6 @@
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
     <LangVersion>7.3</LangVersion>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
   </PropertyGroup>
 </Project>
