--- a/Samples/DotNetCoreSample/DotNetCoreSample.csproj
+++ b/Samples/DotNetCoreSample/DotNetCoreSample.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CSCore.Ffmpeg\CSCore.Ffmpeg.csproj" />
     <ProjectReference Include="..\..\CSCore.Windows\CSCore.Windows.csproj" />
     <ProjectReference Include="..\..\CSCore\CSCore.csproj" />
   </ItemGroup>
